# OpenCVExample

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
